# mcp-secure-python-starter

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_secure_python_starter/: __main__.py  app.py  middleware.py
